Adding max_debt option in config file, removing debug email

--- a/template.html
+++ b/template.html
@@ -1,4 +1,4 @@
-<p>Hola %(nombre)s</p>
+<p>Estimado/a %(nombre)s</p>
 <p>De acuerdo a nuestros registros estarías adeudando %(cuotas)s cuotas por un monto total de %(deuda)s. En caso de que quieras regularizar tu situación nuestros medios de pago son los siguientes:</p>
 <ul>
     <li>A través de los medios de pago ofrecidos por Dineromail, como Pago Fácil y Rapipago, solicitando el envío del cupón de pago a <a href="mailto:tesoreria@wikimedia.org.ar">tesoreria@wikimedia.org.ar</a>. Los pagos a través de Dineromail deben ser de $50 o superiores. Si el socio desea hacer un pago menor a este monto se le cobrará un recargo del 5%% en concepto de gastos de gestión de Dineromail.</li>
